	PR c++/58624 	* pt.c (tsubst_decl) [VAR_DECL]: Copy TLS model. 	(tsubst_copy_and_build) [VAR_DECL]: Use TLS wrapper. 	* semantics.c (finish_id_expression): Don't call TLS wrapper in a 	template.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@214543 138bc75d-0d04-0410-961f-82ee72b054a4